--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,9 @@
+<IfModule mod_rewrite.c>
 RewriteEngine On
-
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-
 RewriteRule ^(.*)$ index.php/$1 [PT,L]
+</IfModule>
+<IfModule !mod_rewrite.c>
+Options -Indexes
+</IfModule>
