--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,7 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [PT,L]
+#RewriteRule . index.php [L]
 </IfModule>
 <IfModule !mod_rewrite.c>
 Options -Indexes
